
	<!--
		menu.add(0, MENU_START, 0, R.string.menu_start); menu.add(0,
		MENU_STOP, 0, R.string.menu_stop); menu.add(0, MENU_PAUSE, 0,
		R.string.menu_pause); menu.add(0, MENU_RESUME, 0,
		R.string.menu_resume); menu.add(0, MENU_EASY, 0, R.string.menu_easy);
		menu.add(0, MENU_MEDIUM, 0, R.string.menu_medium); menu.add(0,
		MENU_HARD, 0, R.string.menu_hard);
	-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_start" android:title="@string/menu_start" />
	<item android:id="@+id/menu_stop" android:title="@string/menu_stop" />
	<item android:id="@+id/menu_pause" android:title="@string/menu_pause" />
	<item android:id="@+id/menu_resume" android:title="@string/menu_resume" />
	<item android:id="@+id/menu_difficulty" android:title="@string/menu_difficulty" android:menuCategory="container">	
		<menu xmlns:android="http://schemas.android.com/apk/res/android">
		<group android:id="@+id/group_difficulty" android:checkableBehavior="single">
			<item android:id="@+id/menu_easy" android:title="@string/menu_easy" />
			<item android:id="@+id/menu_medium" android:title="@string/menu_medium" />
			<item android:id="@+id/menu_hard" android:title="@string/menu_hard" />
		</group>
		</menu>
	</item>
</menu>
